# rbourgeois33.github.io

./: .gitignore  404.html  README.md  _config.yml  index.html  index.md  mkdocs.yml  post1.md  search.html
code-sample/: .gitignore  CMakeLists.txt  README.md  sample-1-fixed.cpp  sample-1.cpp  sample-2-fixed.cpp  sample-2.cpp  sample-3.cpp  sample-4-fixed.cpp  sample-4.cpp  sample-5.cpp  sample-6-fixed.cpp  sample-6.cpp  sample-7-fixed.cpp  sample-7.cpp  sample-8-fixed.cpp  sample-8.cpp
code-sample/toolchains/: cuda.ada.cmake  env_adastra.sh  env_macbook.sh  hip.mi250.cmake  hip.mi300a.cmake
code-sample/workloads/sample-1-fixed/MI210/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-1-fixed/MI300A_A1/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-1/MI210/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-1/MI300A_A1/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-2-fixed/MI210/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-2-fixed/MI300A_A1/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-2/MI210/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-2/MI300A_A1/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-3/MI210/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-3/MI300A_A1/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-4-fixed/MI210/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-4-fixed/MI300A_A1/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-4/MI210/: log.txt  pmc_perf.csv  profiling_config.yaml  sysinfo.csv
code-sample/workloads/sample-5/MI210/: log.txt  (+3 more)
(+129 files in other folders)
